# mp3-metadata-writer

./: README.md  pyproject.toml
src/mediafile_metadata_operator/: available_metadata_tags.py  main.py
src/mediafile_metadata_operator/exceptions/: __init__.py  invalid_file_format.py  invalid_input_format.py
src/mediafile_metadata_operator/mediafiles/: file_meta.json
src/mediafile_metadata_operator/process/: __init__.py  extension_transformer.py  metadata_writer.py  serial_no_into_file_name.py
