[project]
name = "mediafile-metadata-operator"
version = "0.1.0"
description = ""
authors = [
    {name = "mary",email = "marrymarymorry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mutagen (>=1.47.0,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "audioop-lts (>=0.2.1,<0.3.0)"
]

[tool.poetry]
packages = [{include = "mediafile_metadata_operator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
